# parakeet-rs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.cpu  PLAN_DOCKER_WEBRTC.md  PLAN_REALTIME_STREAMING.md  README.md  canary  docker-compose.gpu.yml  docker-compose.yml  extract-session.py  init.sh  run.sh  start-coturn.sh  start-server.sh  start-sessions.sh  start_coturn.sh  tdt  test_ws_ui.py  test_ws_ui.sh
.github/workflows/: rust.yml
coturn/: turnserver.conf
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.frontend  Dockerfile.transcriber
docker/coturn/: turnserver.conf
docker/nginx/: default.conf
docs/: CPU_VS_GPU_PARALLEL_PROCESSING.md  MULTI_SESSION_ARCHITECTURE_PLAN.md  api.md  architecture.md  deployment.md  fab-teletext.md  frontend.md  network-diagram.md  testing.md  transcription-modes.md  webrtc-transcription-architecture.md
docs/webrtc/: README.md  api-reference.md  architecture.md  deployment.md  frontend.md  latency-modes.md
examples/: coreml_test.rs  diarization.rs  diarization_fast.rs  pyannote.rs  raw.rs  realtime_streaming.rs  realtime_tdt.rs  streaming.rs  test_canary_vad_evaluation.rs  test_vad.rs  test_vad_3min.rs  test_vad_state.rs  test_vad_working.rs  test_ws_canary_vad.rs  transcribe.rs  webrtc_transcriber.rs  ws_transcriber.rs
examples/tests/: test_canary_speedy_growing.rs  test_canary_vad_e2e.rs  test_vad_debug.rs  test_vad_full_scan.rs  test_vad_real.rs  test_vad_state_debug.rs
examples/webrtc_transcriber/: config.rs  fab_forwarder.rs  main.rs  srt_config.rs  state.rs
examples/webrtc_transcriber/api/: config.rs  mod.rs  models.rs  noise.rs  sessions.rs
examples/webrtc_transcriber/transcription/: mod.rs
examples/webrtc_transcriber/webrtc_handlers/: audio.rs  mod.rs
frontend/: coturn_test.html  index-webrtc.html  index.html  turn_test.html
frontend/css/: styles.css
frontend/js/: config.js  main-sessions.js  main-webrtc.js
frontend/js/modules/: session-manager.js  subtitles.js  webrtc.js  websocket.js
playwright-report/: index.html
ref/: test.md
scripts/: benchmark_broadcast1.py  benchmark_pause_segmented.py  export_canary_qwen.py  test_growing_segments.py  test_growing_segments.sh
scripts/benchmark_results/: broadcast1_voxtral-4b_pause_segmented_noformat_20260318_090544.json  broadcast1_voxtral-4b_pause_segmented_noformat_20260319_015633.json
src/: audio.rs  canary.rs  canary_flash.rs  canary_qwen.rs  config.rs  decoder.rs  decoder_tdt.rs  error.rs  execution.rs  formatting_transcriber.rs  german_normalizer.rs  growing_text.rs  language_detector.rs  lib.rs  media_manager.rs  model.rs  model_eou.rs  model_registry.rs  model_tdt.rs  noise_cancellation.rs  parakeet.rs  parakeet_eou.rs  parakeet_eou_fast.rs  parakeet_tdt.rs  parallel_canary.rs  parallel_canary_qwen.rs  parallel_tdt.rs  pause_parallel_canary.rs  pause_parallel_canary_qwen.rs  pause_parallel_tdt.rs  pause_segmented.rs  pause_segmented_canary_qwen.rs  pause_segmented_tdt.rs  pause_segmented_voxtral.rs  pause_segmented_whisper.rs  realtime.rs  realtime_canary.rs  realtime_canary_flash.rs  realtime_canary_qwen.rs  realtime_canary_qwen_vad.rs  (+20 more)
tests/: integration_transcription.rs  test_websocket.js  test_ws_canary_vad.py
tests/e2e/: debug-browser-no-relay.ts  debug-browser.ts  debug-current-panel.ts  debug-firefox.ts  debug-sdp.ts  export.spec.ts  media-upload.spec.ts  playwright.config.ts  session-lifecycle.spec.ts  test-turn.ts  transcription.spec.ts  vod-transcription.spec.ts  webrtc.spec.ts
tests/e2e/helpers/: session-helpers.ts  webrtc-helpers.ts
voxtral-server/: .env.example  Dockerfile  base.Dockerfile  compare_transcripts.py  docker-compose.voxtral.yml  entrypoint.sh  pyproject.toml  start-vllm.sh  start.sh
voxtral-server/tests/: test_segmenter.py
voxtral-server/voxtral_server/: config.py  main.py  models.py  state.py
voxtral-server/voxtral_server.egg-info/: PKG-INFO
voxtral-server/voxtral_server/api/: config_routes.py  model_routes.py  session_routes.py
voxtral-server/voxtral_server/audio/: ffmpeg_source.py  webrtc_track.py
voxtral-server/voxtral_server/media/: manager.py
voxtral-server/voxtral_server/transcription/: fab_forwarder.py  segmenter.py  session_runner.py  vllm_client.py
voxtral-server/voxtral_server/ws/: handler.py
