[package]
name = "parakeet-rs"
version = "0.2.5"
edition = "2021"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/altunenes/parakeet-rs"
license = "MIT OR Apache-2.0"
keywords = ["speech-recognition", "asr", "parakeet", "onnx", "nvidia"]
categories = ["multimedia::audio", "science"]

[lib]
name = "parakeet_rs"
path = "src/lib.rs"

[[example]]
name = "transcribe"
path = "examples/transcribe.rs"

[[example]]
name = "diarization"
path = "examples/diarization.rs"

[[example]]
name = "raw"
path = "examples/raw.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
hound = "3.5"
eyre = "0.6"
ndarray = "0.16"
tokenizers = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.4"

[dev-dependencies]
rayon = "1.10"
num_cpus = "1.16"
cpal = "0.15"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"

[[example]]
name = "diarization_fast"
path = "examples/diarization_fast.rs"

[[example]]
name = "realtime_streaming"
path = "examples/realtime_streaming.rs"

[[example]]
name = "realtime_tdt"
path = "examples/realtime_tdt.rs"

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
sortformer = []