[package]
name = "parakeet-rs"
version = "0.3.0"
edition = "2021"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/altunenes/parakeet-rs"
license = "MIT OR Apache-2.0"
keywords = ["speech-recognition", "asr", "parakeet", "onnx", "nvidia"]
categories = ["multimedia::audio", "science"]

[lib]
name = "parakeet_rs"
path = "src/lib.rs"

[[bin]]
name = "parakeet-server"
path = "src/bin/server/main.rs"
required-features = ["server"]

[dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
hound = "3.5"
eyre = "0.6"
ndarray = "0.16"
tokenizers = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.4"
tokio = { version = "1", features = ["fs", "process", "sync"] }
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
nnnoiseless = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rubato = "0.15"

# Server-only dependencies (optional, gated behind "server" feature)
clap = { version = "4.5", features = ["derive", "env"], optional = true }
axum = { version = "0.7", features = ["ws", "multipart"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
futures-util = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }
webrtc = { version = "0.11", optional = true }
audiopus = { version = "0.3.0-rc.0", optional = true }
libc = { version = "0.2", optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[features]
default = ["cpu"]
cpu = []
cuda = []
tensorrt = []
coreml = []
directml = []
rocm = []
openvino = []
webgpu = []
sortformer = []
rnnoise = []
server = [
    "dep:clap",
    "dep:axum",
    "dep:tower-http",
    "dep:futures-util",
    "dep:base64",
    "dep:webrtc",
    "dep:audiopus",
    "dep:libc",
    "dep:reqwest",
    "tokio/full",
]
